made: middleware fix: swagger documentation
