# docs/swagger.json
@@ -5,8 +5,6 @@
         "title": "URLProject",
         "contact": {}
     },
-    "host": "localhost:8080",
-    "basePath": "/",
     "paths": {
         "/auth/login": {
             "post": {
@@ -203,6 +201,15 @@
                     "Link"
                 ],
                 "summary": "Delete",
+                "parameters": [
+                    {
+                        "type": "integer",
+                        "description": "URL's id",
+                        "name": "id",
+                        "in": "path",
+                        "required": true
+                    }
+                ],
                 "responses": {
                     "200": {
                         "description": "linke is deleted successfully",
@@ -225,6 +232,11 @@
                 }
             },
             "patch": {
+                "security": [
+                    {
+                        "BearerAuth": []
+                    }
+                ],
                 "description": "Update the link by id",
                 "consumes": [
                     "application/json"
@@ -236,6 +248,15 @@
                     "Link"
                 ],
                 "summary": "Update",
+                "parameters": [
+                    {
+                        "type": "integer",
+                        "description": "URL's id",
+                        "name": "id",
+                        "in": "path",
+                        "required": true
+                    }
+                ],
                 "responses": {
                     "200": {
                         "description": "linke is updated successfully",
@@ -323,6 +344,13 @@
                     "type": "string"
                 }
             }
+        }
+    },
+    "securityDefinitions": {
+        "BearerAuth": {
+            "type": "apiKey",
+            "name": "Authorization",
+            "in": "header"
         }
     }
 }
