# internal/delivery/app.go
@@ -2,6 +2,7 @@ package delivery
 
 import (
 	"URLProject/internal/delivery/handlers"
+	"URLProject/internal/delivery/middleware"
 	"URLProject/internal/delivery/router"
 	"github.com/gin-gonic/gin"
 	swaggerFiles "github.com/swaggo/files"
@@ -10,10 +11,16 @@ import (
 
 // @title URLProject
 // @description Project for shorting the URLS
+// @securityDefinitions.apikey BearerAuth
+// @in header
+// @name Authorization
 // @host localhost:8080
 // @BasePath /
 func StartServer(authServer *handlers.AuthServer, linkServer *handlers.LinkServer) {
 	r := gin.Default()
+
+	r.Use(middleware.CORS())
+	r.Use(middleware.Logging())
 
 	r.GET("/swagger/*any", ginSwagger.WrapHandler(swaggerFiles.Handler))
 	router.InitRouting(r, authServer, linkServer)
